--- a/Project/contact.html
+++ b/Project/contact.html
@@ -91,7 +91,7 @@
 </section>
     </main>
     <footer>
-        <h3 id="footer-coname">Soul Yoga</h3>
+        <a id="footer-coname" href="index.html">Soul Yoga Studio</a>
         <p id="footer-description">A calm place for self-development and yoga practice in Ottawa. Lift the world from
             your shouders.</p>
         <a id="footer-schedule" href="schedule.html">Schedule</a>
