--- a/Project/schedule.html
+++ b/Project/schedule.html
@@ -138,8 +138,8 @@
         </div>
     </main>
     <footer>
-        <h3 id="footer-coname">Soul Yoga</h3>
-        <p id="footer-description">A calm place for self-development and yoga practice in Ottawa. Lift the world from
+      <a id="footer-coname" href="index.html">Soul Yoga Studio</a>
+      <p id="footer-description">A calm place for self-development and yoga practice in Ottawa. Lift the world from
             your shouders.</p>
         <a id="footer-schedule" href="schedule.html">Schedule</a>
         <a id="footer-gallery" href="gallery.html">Gallery</a>
