--- a/Project/gallery.html
+++ b/Project/gallery.html
@@ -37,7 +37,7 @@
             <h2>Atmosphere to calm you down</h2>
             <p>We have carefully studied every detail in Tibetan temples that helps people there to restore harmony within themselves.  And then, we have brought the best practices into our studio so that you can experience this atmosphere at any time, even in the middle of Canada.</p>
         </section>
-        <section class="gallery">
+        <div class="gallery">
 <img src="images/gallery1.jpg" alt="a picture of yoga session room">
 <!-- <img src="images/gallery2.jpg" alt="a picture of yoga session room"> -->
 <img src="images/gallery3.jpg" alt="a picture of yoga session room">
@@ -49,9 +49,9 @@
 <img src="images/gallery9.jpg" alt="a picture of yoga session room">
 
                
-            </section>
+        </div>
             <div class="center">
-            <a href="contact.html#book-lesson"><button id="book-lesson-button">Book</button></a>
+            <a class="button" href="contact.html#book-lesson">Book</a>
         </div>
     </main>
     <footer>
