Errors from html check fixed

--- a/Project/schedule.html
+++ b/Project/schedule.html
@@ -98,7 +98,7 @@
                   </tr>
                   <tr>
                     <td class="time">1PM</td>
-                    <td>Calming Session <span class="trainer-name">Bruce</td>
+                    <td>Calming Session <span class="trainer-name">Bruce</span></td>
                     <td>Advanced Session <span class="trainer-name">Steve</span></td>
                     <td>Calming Session <span class="trainer-name">Regina</span></td>
                     <td>Advanced Session <span class="trainer-name">Regina</span></td>
@@ -107,7 +107,7 @@
                   </tr>
                   <tr>
                     <td class="time">3PM</td>
-                    <td>Advanced Session <span class="trainer-name">Alice</td>
+                    <td>Advanced Session <span class="trainer-name">Alice</span></td>
                     <td>Calming Session <span class="trainer-name">Bruce</span></td>
                     <td>Advanced Session <span class="trainer-name">Bruce</span></td>
                     <td>Calming Session <span class="trainer-name">Alice</span></td>
@@ -134,7 +134,7 @@
                   </tr>
                 </tbody>
                 </table>
-                <a href="contact.html#book-lesson"><button id="book-lesson-button">Book</button></a>
+                <a class="button" href="contact.html#book-lesson">Book</a>
         </div>
     </main>
     <footer>
