errors from html check fixed

--- a/Project/contact.html
+++ b/Project/contact.html
@@ -55,9 +55,9 @@
         Soul Yoga Studio<br>
         7B Calm street,<br>
         Ottawa, 7A7 7A7 <br>
-        <span class="golden">+1 613 123 4567<br>
-        <a id="email" href="mailto:amoiseyenko@ukr.net?subject=Inquiry%20from%20website">
-            info@SoulYoga.com</a></span>
+        <span class="golden">+1 613 123 4567</span><br>
+        <a href="mailto:amoiseyenko@ukr.net?subject=Inquiry%20from%20website">
+            <span class="golden">info@SoulYoga.com</span></a>
     </address>
 </div>
 
@@ -75,14 +75,14 @@
                 Leave us a message by filling out the form below.  <span class="golden">We will contact you within one hour during working hours</span> to book a lesson for you.
             </p>
 <form>
-        <label for="Name">Your Name: </label>
-        <input type="text" id="catName" name="catName"><br>
-        <label for="age">Lesson: </label>
-        <input type="text" id="age" name="age"><br>
-        <label for="ownerName">Time: </label>
-        <input type="text" id="ownerName" name="ownerName"><br>
-        <label for="email">Email<span class="golden">*</span>: </label>
-        <input type="email" id="email" name="email" required><br>
+        <label for="name">Your Name: </label>
+        <input type="text" id="name" name="name"><br>
+        <label for="lesson">Lesson: </label>
+        <input type="text" id="lesson" name="lesson"><br>
+        <label for="time">Time: </label>
+        <input type="text" id="time" name="time"><br>
+        <label for="form-email">Email<span class="golden">*</span>: </label>
+        <input type="email" id="form-email" name="email" required><br>
         <label for="phone">Telephone number<span class="golden">*</span>: </label>
         <input type="number" id="phone" name="phone" required placeholder="In format 613 123 1234"><br>
 
