Gallery Flex replaced with Grid

--- a/Project/index.html
+++ b/Project/index.html
@@ -85,7 +85,7 @@
                 your body, your mind, and your emotions.</p>
             <p>You know them to some extent, and you can infer that if these three things have to happen the way they
                 are happening, there must be an energy that makes them happen.</p>
-            <a href="schedule.html"><button>Schedule</button></a>
+            <a class="button" href="schedule.html">Schedule</a>
         </section>
 
         <div class="plx-img3"></div>
@@ -99,7 +99,7 @@
                 many 'dharma shalas' to support wandering yogis. We hope our dharma shala will be a supportive place for
                 you.</p>
             <!-- here goes gallery 3pic -->
-            <a href="gallery.html"><button>See gallery</button></a>
+            <a class="button" href="gallery.html">See gallery</a>
         </section>
     </main>
     <footer>
