--- a/Project/gallery.html
+++ b/Project/gallery.html
@@ -39,14 +39,17 @@
         </section>
         <div class="gallery">
 <img src="images/gallery1.jpg" alt="a picture of yoga session room">
-<!-- <img src="images/gallery2.jpg" alt="a picture of yoga session room"> -->
+<img src="images/gallery2.jpg" alt="a picture of yoga session room">
 <img src="images/gallery3.jpg" alt="a picture of yoga session room">
 <img src="images/gallery4.jpg" alt="a picture of individual yoga session">
 <img src="images/gallery5.jpg" alt="a picture of self-practice">
 <img src="images/gallery6.jpg" alt="a picture of yoga session room">
-<!-- <img src="images/gallery7.jpg" alt="a picture of ashtanga yoga session"> -->
-<!-- <img src="images/gallery8.jpg" alt="a picture of yoga session room"> -->
+<img src="images/gallery7.jpg" alt="a picture of ashtanga yoga session">
+<img src="images/gallery8.jpg" alt="a picture of yoga session room">
 <img src="images/gallery9.jpg" alt="a picture of yoga session room">
+<img src="images/gallery10.jpg" alt="a picture of ashtanga yoga session">
+<img src="images/gallery11.jpg" alt="a picture of yoga session room">
+<img src="images/gallery12.jpg" alt="a picture of yoga session room">
 
                
         </div>
