Index-gallery added

--- a/Project/index.html
+++ b/Project/index.html
@@ -98,7 +98,11 @@
             <p>Our shala is named 'Dharma Shala' inspired by the story of an ancient Indian king called Ashoka who built
                 many 'dharma shalas' to support wandering yogis. We hope our dharma shala will be a supportive place for
                 you.</p>
-            <!-- here goes gallery 3pic -->
+            <div class="index-gallery">
+                <img src="images/gallery1.jpg" alt="a picture of yoga session room">
+                <img src="images/gallery2.jpg" alt="a picture of yoga session room">
+                <img src="images/gallery4.jpg" alt="a picture of individual yoga session">
+            </div>
             <a class="button" href="gallery.html">See gallery</a>
         </section>
     </main>
