social module updated

--- a/Project/index.html
+++ b/Project/index.html
@@ -117,10 +117,13 @@
         </address>
 
         <h3 id="footer-join">Join us</h3><br>
-        <a id="footer-socials" href="https://www.linkedin.com/in/mrskyray/"><img src="images/Socials.png"
-                alt="fake social network block"></a>
-
-        <p id="footer-author">Andrew Moiseyenko<br>Angonquin College<br>2022</p>
+        <div id="footer-socials">
+            <a href="https://www.instagram.com/youngmystic.oils/"><img src="images/Social1.png" alt="instagram logo"></a>
+            <a href="mailto:amoiseyenko@ukr.net?subject=Inquiry%20from%20website"><img src="images/Social2.png" alt="email logo"></a>
+            <a href="https://www.facebook.com/Oiler.Andrew"><img src="images/Social3.png" alt="facebook logo"></a>
+            <a href="https://t.me/mrskyray"><img src="images/Social4.png" alt="telegram logo"></a>
+            </div>
+        <p id="footer-author">  <a href="https://www.linkedin.com/in/mrskyray/">Andrew Moiseyenko</a><br>Angonquin College, 2022</p>
 
     </footer>
 </body>
