open link in a new tab added

--- a/Project/index.html
+++ b/Project/index.html
@@ -118,10 +118,20 @@
 
         <h3 id="footer-join">Join us</h3><br>
         <div id="footer-socials">
-            <a href="https://www.instagram.com/youngmystic.oils/"><img src="images/Social1.png" alt="instagram logo"></a>
-            <a href="mailto:amoiseyenko@ukr.net?subject=Inquiry%20from%20website"><img src="images/Social2.png" alt="email logo"></a>
-            <a href="https://www.facebook.com/Oiler.Andrew"><img src="images/Social3.png" alt="facebook logo"></a>
-            <a href="https://t.me/mrskyray"><img src="images/Social4.png" alt="telegram logo"></a>
+            <!--  target="_blank" is needed to open a link in a new tab;
+           According to freeCodeCamp, it is a good practice to include  rel="noopener noreferrer" to prevent so called "tabnabbing"-->
+            <a href="https://www.instagram.com/youngmystic.oils/"  target="_blank" rel="noopener noreferrer">
+                <img src="images/Social1.png" alt="instagram logo" >
+            </a>
+            <a href="mailto:amoiseyenko@ukr.net?subject=Inquiry%20from%20website"  target="_blank" rel="noopener noreferrer">
+                <img src="images/Social2.png" alt="email logo">
+            </a>
+            <a href="https://www.facebook.com/Oiler.Andrew"  target="_blank" rel="noopener noreferrer">
+                <img src="images/Social3.png" alt="facebook logo">
+        </a>
+            <a href="https://t.me/mrskyray" target="_blank" rel="noopener noreferrer">
+                <img src="images/Social4.png" alt="telegram logo">
+            </a>
             </div>
         <p id="footer-author">  <a href="https://www.linkedin.com/in/mrskyray/">Andrew Moiseyenko</a><br>Angonquin College, 2022</p>
 
